--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +16,64 @@
   }
 }
 </script>
+<style>
+  body {
+    background-color: #111827; /* bg-gray-900 */
+    overscroll-behavior-y: contain; /* Prevents pull-to-refresh on mobile affecting the whole page */
+  }
+  /* Custom scrollbar for WebKit browsers (Chrome, Safari, newer Edge) */
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: rgba(31, 41, 55, 0.3); /* bg-gray-800 with opacity */
+    border-radius: 10px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(167, 139, 250, 0.5); /* A muted purple, similar to purple-400 */
+    border-radius: 10px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(167, 139, 250, 0.7);
+  }
+  /* For Firefox */
+  .custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(167, 139, 250, 0.5) rgba(31, 41, 55, 0.3);
+  }
+
+  /* Custom shadow for elements needing a shadow only on the top (like bottom nav) */
+  .shadow-top {
+    box-shadow: 0 -4px 10px -3px rgba(0, 0, 0, 0.2), 0 -2px 6px -2px rgba(0, 0, 0, 0.15);
+  }
+
+  /* Onboarding Modal Styles */
+  .modal-backdrop {
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black backdrop */
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
+  }
+  .modal-content {
+    /* Default state for animation */
+  }
+
+  @keyframes modalFadeInScale {
+    from {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  .animate-modalFadeInScale {
+    animation: modalFadeInScale 0.3s ease-out forwards;
+  }
+
+</style>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-900">
