--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     "react/": "https://esm.sh/react@^19.1.0/",
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.3.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.3.0",
+    "i18next": "https://esm.sh/i18next@^23.10.0",
+    "react-i18next": "https://esm.sh/react-i18next@^14.1.0",
+    "i18next-http-backend": "https://esm.sh/i18next-http-backend@^2.5.0",
+    "i18next-browser-languagedetector": "https://esm.sh/i18next-browser-languagedetector@^7.2.0"
   }
 }
 </script>
