--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     "i18next": "https://esm.sh/i18next@^23.10.0",
     "react-i18next": "https://esm.sh/react-i18next@^14.1.0",
     "i18next-http-backend": "https://esm.sh/i18next-http-backend@^2.5.0",
-    "i18next-browser-languagedetector": "https://esm.sh/i18next-browser-languagedetector@^7.2.0"
+    "i18next-browser-languagedetector": "https://esm.sh/i18next-browser-languagedetector@^7.2.0",
+    "@polkadot/extension-dapp": "https://esm.sh/@polkadot/extension-dapp@^0.46.9",
+    "@polkadot/util": "https://esm.sh/@polkadot/util@^12.6.2",
+    "@polkadot/keyring": "https://esm.sh/@polkadot/keyring@^12.6.2",
+    "@polkadot/util-crypto": "https://esm.sh/@polkadot/util-crypto@^12.6.2",
+    "react-dom": "https://esm.sh/react-dom@^19.1.0"
   }
 }
 </script>
@@ -53,7 +58,7 @@
     box-shadow: 0 -4px 10px -3px rgba(0, 0, 0, 0.2), 0 -2px 6px -2px rgba(0, 0, 0, 0.15);
   }
 
-  /* Onboarding Modal Styles */
+  /* Modal Styles */
   .modal-backdrop {
     background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black backdrop */
     -webkit-backdrop-filter: blur(4px);
@@ -82,6 +87,7 @@
 </head>
 <body class="bg-gray-900">
   <div id="root"></div>
+  <div id="modal-root"></div> <!-- Placeholder for modals -->
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
