--- a/index.html
+++ b/index.html
@@ -89,5 +89,6 @@
   <div id="root"></div>
   <div id="modal-root"></div> <!-- Placeholder for modals -->
   <script type="module" src="/index.tsx"></script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
